--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ DB_HOST = localhost,
 DB_PORT = 5423,
 DB_USER = magazine-marciano,
 DB_PASSWORD = 123456789,
-DB_DATABASE = MagazineMarciano,
+DB_DATABASE = MagazineMarciano
